@@ -1,5 +1,6 @@
 2011-06-02  Holger Vogt
  * tests/hisim/makefile.am: no more test1.cir in EXTRA_DIST
+ * INSTALL, compile_min.sh: new instructions for mingw compilation
  
 2011-06-01  Dietmar Warning
  * devices/bjt/bjt.c: introduce ccc as an alias for the 
